Fixed some issues with .gitignore, added Screenshot for FB and Twitter, edits to settings.py and the base template 	modified:   ../.gitignore 	new file:   autism_prevalence_map/static/autism_prevalence_map/img/PrevalenceMapSG.png 	modified:   autism_prevalence_map/templates/autism_prevalence_map/base.html 	modified:   spectrum/settings.py

--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,10 @@ Thumbs.db
 ##########
 .vscode/*
 env/*
-.ebextensions/ssl.config 
+.ebextensions/ssl.config
+
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
