--- a/.ebextensions/wsgi.conf
+++ b/.ebextensions/wsgi.conf
@@ -1,10 +1,6 @@
 ServerSignature Off
 ServerTokens Prod
 
-LoadModule wsgi_module modules/mod_wsgi.so
-LoadModule ssl_module modules/mod_ssl.so
-LoadModule env_module modules/mod_env.so
-
 PassEnv DJANGO_ALLOWED_HOSTS
 
 LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
@@ -21,6 +17,7 @@ WSGIRestrictEmbedded On
   Redirect permanent / https://${DJANGO_ALLOWED_HOSTS}
 </VirtualHost>
 
+#Listen 443 https
 <VirtualHost *:443>
   ServerName ${DJANGO_ALLOWED_HOSTS}
   ServerAdmin cloud-admins@simonsfoundation.org
