--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ astroid==1.6.5
 backports.functools-lru-cache==1.5
 configparser==3.5.0
 Django==1.11.17
+django-environ==0.4.5
 enum34==1.1.6
-futures=3.1.1
+futures==3.1.1
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
@@ -13,4 +14,3 @@ pytz==2018.5
 singledispatch==3.4.0.3
 six==1.11.0
 wrapt==1.10.11
-django-environ==0.4.5
