changed beanstalk application name in config.yml

--- a/jenkins/config.yml
+++ b/jenkins/config.yml
@@ -1,17 +1,16 @@
 branch-defaults:
   master:
-    environment: prevalence-prod
+    environment: prevalencemap-prod
   sf-deployment:
-    environment: prevalence-staging
+    environment: prevalencemap-staging
 environment-defaults:
-  prevalence-staging:
+  prevalencemap-staging:
     branch: null
     repository: null
 global:
   application_name: spectrumnews.org
   default_ec2_keyname: ansible at rack
-  default_platform: arn:aws:elasticbeanstalk:us-east-1::platform/Python 2.7 running
-    on 64bit Amazon Linux/2.7.4
+  default_platform: arn:aws:elasticbeanstalk:us-east-1::platform/64bit Amazon Linux 2 v3.3.5 running Python 3.8
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
