--- a/jenkins/config.yml
+++ b/jenkins/config.yml
@@ -1,7 +1,7 @@
 branch-defaults:
   master:
     environment: prevalencemap-prod
-  sf-deployment:
+  develop:
     environment: prevalencemap-staging
 environment-defaults:
   prevalencemap-staging:
@@ -9,8 +9,8 @@ environment-defaults:
     repository: null
 global:
   application_name: spectrumnews.org
-  default_ec2_keyname: ansible at rack
-  default_platform: arn:aws:elasticbeanstalk:us-east-1::platform/64bit Amazon Linux 2 v3.3.5 running Python 3.8
+  default_ec2_keyname: null
+  default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
