--- a/.ebextensions/wsgi.conf
+++ b/.ebextensions/wsgi.conf
@@ -5,7 +5,7 @@ PassEnv DJANGO_ALLOWED_HOSTS
 
 LogFormat "%h (%{X-Forwarded-For}i) %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
 
-WSGIPythonHome /opt/python/run/baselinenv
+WSGIPythonHome /usr/bin/python3.8
 WSGISocketPrefix run/wsgi
 WSGIRestrictEmbedded On
 
@@ -23,23 +23,23 @@ WSGIRestrictEmbedded On
   ServerAdmin cloud-admins@simonsfoundation.org
   SSLEngine on
   SSLCertificateFile "/etc/pki/tls/certs/server.crt"
-  SSLCertificateKeyFile "/etc/pki/tls/certs/server.key"
-  SSLProtocol TLSv1.1 TLSv1.2
+  SSLCertificateKeyFile "/etc/pki/tls/private/server.key"
+  SSLProtocol TLSv1.2 TLSv1.3
   SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK
   Header always set Strict-Transport-Security "max-age=15768000; includeSubdomains; preload"
   Header unset Server
-  Alias /static/ /opt/python/current/app/spectrum/autism_prevalence_map/static/
-  <Directory /opt/python/current/app/spectrum/autism_prevalence_map/static>
+  Alias /static/ /var/app/current/spectrum/autism_prevalence_map/static/
+  <Directory /var/app/current/spectrum/autism_prevalence_map/static>
     Order allow,deny
     Allow from all
   </Directory>
-  WSGIScriptAlias / /opt/python/current/app/spectrum/spectrum/wsgi.py
+  WSGIScriptAlias / /var/app/spectrum/spectrum/wsgi.py
   <Directory /opt/python/current/app>
     Require all granted
   </Directory>
   WSGIDaemonProcess wsgi-ssl processes=1 threads=15 display-name=%{GROUP} \
-    python-path=/opt/python/current/app:/opt/python/run/venv/lib/python2.7/site-packages:/opt/python/run/venv/lib64/python2.7/site-packages \
-    home=/opt/python/current/app/spectrum \
+    python-path=/var/app/current/:/usr/lib/python3.8/site-packages:/usr/lib64/python3.8/site-packages:/usr/local/lib/python3.8/site-packages \
+    home=/var/app/current/spectrum \
     user=wsgi \
     group=wsgi
   WSGIProcessGroup wsgi-ssl
