updates to ebextensions

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,9 +3,9 @@ option_settings:
     WSGIPath: spectrum/spectrum/wsgi.py
 
 container_commands:
-  01migrate:
-    command: "python spectrum/manage.py migrate"
-  02pull_studies_from_gsheets:
-    command: "python spectrum/manage.py pull_studies_from_gsheets"
-
-
+  01deploywsgi:
+    command: "/bin/cp -f .ebextensions/wsgi.conf /etc/httpd/conf.d/elasticbeanstalk/"
+  02migrate:
+    command: "python3.8 spectrum/manage.py migrate"
+  03pull_studies_from_gsheets:
+    command: "python3.8 spectrum/manage.py pull_studies_from_gsheets"
