django migrate commented

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -5,7 +5,7 @@ option_settings:
 container_commands:
   01deploywsgi:
     command: "/bin/cp -f .ebextensions/wsgi.conf /etc/httpd/conf.d/elasticbeanstalk/"
-  02migrate:
-    command: "python3.8 spectrum/manage.py migrate"
-  03pull_studies_from_gsheets:
-    command: "python3.8 spectrum/manage.py pull_studies_from_gsheets"
+#  02migrate:
+#    command: "python3.8 spectrum/manage.py migrate"
+#  03pull_studies_from_gsheets:
+#    command: "python3.8 spectrum/manage.py pull_studies_from_gsheets"
