--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -5,7 +5,9 @@ option_settings:
 container_commands:
   01deploywsgi:
     command: "/bin/cp -f .ebextensions/wsgi.conf /etc/httpd/conf.d/elasticbeanstalk/"
-#  02migrate:
+  02procfile:
+    command: "echo 'web: uwsgi --http :8000 --wsgi-file spectrum/spectrum/wsgi.py --master --processes 4 --threads 2' > Procfile"
+#  03migrate:
 #    command: "python3.8 spectrum/manage.py migrate"
-#  03pull_studies_from_gsheets:
+#  04pull_studies_from_gsheets:
 #    command: "python3.8 spectrum/manage.py pull_studies_from_gsheets"
