--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,7 @@
+packages:
+  yum:
+    python3-mod_wsgi.x86_64: []
+
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: spectrum/spectrum/wsgi.py
