added Procfile for app config

--- a/.ebextensions/wsgi.conf
+++ b/.ebextensions/wsgi.conf
@@ -38,7 +38,7 @@ WSGIRestrictEmbedded On
     Require all granted
   </Directory>
   WSGIDaemonProcess wsgi-ssl processes=1 threads=15 display-name=%{GROUP} \
-    python-path=/var/app/current/:/usr/lib/python3.8/site-packages:/usr/lib64/python3.8/site-packages:/usr/local/lib/python3.8/site-packages \
+    python-path=/var/app/current/:/var/app/venv/staging-LQM1lest/bin:/usr/lib/python3.8/site-packages:/usr/lib64/python3.8/site-packages:/usr/local/lib/python3.8/site-packages \
     home=/var/app/current/spectrum \
     user=wsgi \
     group=wsgi
