changed deployment flow by renaming spectrum to src

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -4,11 +4,17 @@ packages:
 
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: spectrum/spectrum/wsgi.py
+    WSGIPath: spectrum/wsgi.py
 
 container_commands:
-  01deploywsgi:
-    command: "/bin/cp -f .ebextensions/wsgi.conf /etc/httpd/conf.d/elasticbeanstalk/"
+  configure:
+    command: "mv spectrum src && mv src/* ."
+#  envfile:
+#    command: "/opt/elasticbeanstalk/deployment/env"
+#  venv:
+#    command: ""
+#  01deploywsgi:
+#    command: "/bin/cp -f .ebextensions/wsgi.conf /etc/httpd/conf.d/elasticbeanstalk/"
 #  03migrate:
 #    command: "python3.8 spectrum/manage.py migrate"
 #  04pull_studies_from_gsheets:
