changed deployment flow by renaming spectrum to src 2

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,7 +7,7 @@ option_settings:
     WSGIPath: spectrum/wsgi.py
 
 container_commands:
-  configure:
+  01configure:
     command: "mv spectrum src && mv src/* ."
 #  envfile:
 #    command: "/opt/elasticbeanstalk/deployment/env"
