fixing typo in .ebext

--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -1,14 +1,14 @@
 files:
-    /tmp/convert_systemd_to_script.sh:
+    "/tmp/convert_systemd_to_script.sh":
+        mode: "000755"
         owner: root
         group: root
-        mode: 000755
         content: |
             #!/usr/bin/env bash
             sed  -e "s/\=/\=\'/g" -e "s/$/'/g" -e "s/^/export /g" /opt/elasticbeanstalk/deployment/env > /var/app/current/spectrum/.env
 
-    /etc/nginx/conf.d/elasticbeanstalk/01_statics.conf:
-        mode: 000644
+    "/etc/nginx/conf.d/elasticbeanstalk/01_statics.conf":
+        mode: "000644"
         owner: root
         group: root
         content: |
