updated STATICFILES_DIRS in settings.py

--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -28,10 +28,10 @@ container_commands:
   02createenv:
     command: "bash -c /tmp/convert_systemd_to_script.sh"
   03collectstatics:
-    command: "source $PYTHONPATH/activate && source /var/app/current/spectrum/.env && python manage.py collectstatic --noinput"
+    command: "source /var/app/current/spectrum/.env && source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
   04migrate:
-    command: "source $PYTHONPATH/activate && source /var/app/current/spectrum/.env && python manage.py migrate --noinput"
+    command: "source /var/app/current/spectrum/.env && source $PYTHONPATH/activate && python manage.py migrate --noinput"
   05pull_studies_from_gsheets:
-    command: "source $PYTHONPATH/activate && source /var/app/current/spectrum/.env && python manage.py pull_studies_from_gsheets"
+    command: "source /var/app/current/spectrum/.env && source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
   06reloadnginx:
     command: "nginx -t && nginx -s reload"
