updated to env file name

--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -5,7 +5,7 @@ files:
         group: root
         content: |
             #!/usr/bin/env bash
-            sed  -e "s/\=/\=\'/g" -e "s/$/'/g" -e "s/^/export /g" /opt/elasticbeanstalk/deployment/env > /var/app/current/spectrum/.env
+            sed  -e "s/\=/\=\'/g" -e "s/$/'/g" -e "s/^/export /g" /opt/elasticbeanstalk/deployment/env > /var/app/.env.spectrum
 
     "/etc/nginx/conf.d/elasticbeanstalk/01_statics.conf":
         mode: "000644"
@@ -28,10 +28,10 @@ container_commands:
   02createenv:
     command: "bash -c /tmp/convert_systemd_to_script.sh"
   03collectstatics:
-    command: "source /var/app/current/spectrum/.env && source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
+    command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
   04migrate:
-    command: "source /var/app/current/spectrum/.env && source $PYTHONPATH/activate && python manage.py migrate --noinput"
+    command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py migrate --noinput"
   05pull_studies_from_gsheets:
-    command: "source /var/app/current/spectrum/.env && source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
+    command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
   06reloadnginx:
     command: "nginx -t && nginx -s reload"
