fixed nginx config deploy

--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -7,7 +7,7 @@ files:
             #!/usr/bin/env bash
             sed  -e "s/\=/\=\'/g" -e "s/$/'/g" -e "s/^/export /g" /opt/elasticbeanstalk/deployment/env > /var/app/.env.spectrum
 
-    "/etc/nginx/conf.d/elasticbeanstalk/01_statics.conf":
+    "/etc/nginx/conf.d/01_statics.conf":
         mode: "000644"
         owner: root
         group: root
@@ -15,7 +15,6 @@ files:
             location /static/ {
                 root /var/www/html/static/;
             }
-
 
 option_settings:
   aws:elasticbeanstalk:container:python:
@@ -34,4 +33,4 @@ container_commands:
   05pull_studies_from_gsheets:
     command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
   06reloadnginx:
-    command: "nginx -t && nginx -s reload"
+    command: "mv /etc/nginx/conf.d/01_statics.conf /etc/nginx/conf.d/elasticbeanstalk/01_statics.conf && nginx -t && nginx -s reload"
