adding static config

--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -7,19 +7,30 @@ files:
             #!/usr/bin/env bash
             sed  -e "s/\=/\=\'/g" -e "s/$/'/g" -e "s/^/export /g" /opt/elasticbeanstalk/deployment/env > /var/app/.env.spectrum
 
-    "/etc/nginx/conf.d/01_statics.conf":
-        mode: "000644"
-        owner: root
-        group: root
-        content: |
-            location /static/ {
-                root /var/www/html/static/;
-            }
+#    "/etc/nginx/conf.d/elasticbeanstalk/01_statics.conf":
+#        mode: "000644"
+#        owner: root
+#        group: root
+#       content: |
+#            location / {
+#                proxy_pass          http://127.0.0.1:8000;
+#                proxy_http_version  1.1;
+#
+#                proxy_set_header    Connection          $connection_upgrade;
+#                proxy_set_header    Upgrade             $http_upgrade;
+#                proxy_set_header    Host                $host;
+#                proxy_set_header    X-Real-IP           $remote_addr;
+#               proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+#            }
+#            location /static/ {
+#                root /var/www/html/static/;
+#            }
 
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: spectrum/wsgi.py
-
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: /var/www/html
 
 container_commands:
   01configure:
@@ -32,5 +43,5 @@ container_commands:
     command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py migrate --noinput"
   05pull_studies_from_gsheets:
     command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
-  06reloadnginx:
-    command: "mv /etc/nginx/conf.d/01_statics.conf /etc/nginx/conf.d/elasticbeanstalk/01_statics.conf && nginx -t && nginx -s reload"
+#  06reloadnginx:
+#    command: "mv /etc/nginx/conf.d/01_statics.conf /etc/nginx/conf.d/elasticbeanstalk/01_statics.conf && nginx -t && nginx -s reload"
