--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -1,12 +1,3 @@
-files:
-    "/tmp/convert_systemd_to_script.sh":
-        mode: "000755"
-        owner: root
-        group: root
-        content: |
-            #!/usr/bin/env bash
-            sed  -e "s/\=/\=\'/g" -e "s/$/'/g" -e "s/^/export /g" /opt/elasticbeanstalk/deployment/env > /var/app/.env.spectrum
-
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: spectrum/wsgi.py
@@ -16,11 +7,9 @@ option_settings:
 container_commands:
   01configure:
     command: "mv spectrum src && mv src/* ."
-  02createenv:
-    command: "bash -c /tmp/convert_systemd_to_script.sh"
-  03collectstatics:
-    command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
-  04migrate:
-    command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py migrate --noinput"
-  05pull_studies_from_gsheets:
-    command: "source /var/app/.env.spectrum && source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
+  02collectstatics:
+    command: "source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
+  03migrate:
+    command: "source $PYTHONPATH/activate && python manage.py migrate --noinput"
+  04pull_studies_from_gsheets:
+    command: "source $PYTHONPATH/activate && python manage.py pull_studies_from_gsheets"
