setting timezone to america/new-york
**PR is optional**

Only needed if @yjfnyc sees issues with prevalence map after setting timezone in settings.py

--- a/.ebextensions/prevalencemap.config
+++ b/.ebextensions/prevalencemap.config
@@ -5,9 +5,11 @@ option_settings:
     /static: /static
 
 container_commands:
-  01configure:
+  01settimezone:
+    command: "/usr/bin/timedatectl set-timezone America/New_York"
+  02configure:
     command: "mv spectrum src && mv src/* ."
-  02collectstatics:
+  03collectstatics:
     command: "source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
-  03migrate:
+  04migrate:
     command: "source $PYTHONPATH/activate && python manage.py migrate --noinput"
