--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/package.json
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/package.json
@@ -24,19 +24,18 @@
         "@types/jquery": "^3.5.32",
         "@typescript-eslint/eslint-plugin": "^7.18.0",
         "@typescript-eslint/parser": "^7.18.0",
-        "concurrently": "8.0.1",
-        "esbuild": "0.17.11",
-        "eslint": "^8.57.1",
+        "concurrently": "9.1.0",
+        "esbuild": "0.24.0",
+        "eslint": "^9.15.0",
         "eslint-config-airbnb-typescript": "^18.0.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.12.0",
-        "husky": "^9.1.4",
-        "lint-staged": "^15.2.8",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
-        "tailwindcss": "^3.4.3",
-        "typescript": "^4.5.4",
-        "typescript-eslint": "^8.15.0"
+        "tailwindcss": "^3.4.15",
+        "typescript": "^5.7.2"
     }
 }
