--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ django-admin-ip-restrictor==2.2.0
 django-ipware==3.0.7
 django-admin-honeypot==1.1.0
 django-inline-svg==0.1.1
+django-ckeditor==5.9.0
